# downloader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile2  copy_src_files_to_vm_shared_in.cmd  logger.yaml  run.cmd
.github/workflows/: dispatch.yml
.workflows/: dispatch.yml
src/: lib.rs  main.rs  prelude.rs
src/data/: mod.rs
tests/: lib_tests.rs
tests/test_data/: playlist.m3u8
