[package]
name = "downloader"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google_bigquery_v2 = { version = "0.2", git = "https://github.com/OMGeeky/google_bigquery_v2" }
google_youtube = { version = "0.2", git = "https://github.com/OMGeeky/google_youtube" }
twitch_data = { version = "0.2", git = "https://github.com/OMGeeky/twitch_data" }
downloader_config = { version = "0.4", git = "https://github.com/OMGeeky/downloader_config" }
tokio = "1.23"
chrono = "0.4.23"
nameof = "1.2.2"
simplelog = "0.12.1"
log4rs = { version = "1.2.0", features = ["compound_policy", "default", "size_trigger", "all_components", "gzip"] }
path-clean = "1.0.1"

log-panics = { version = "2", features = ["with-backtrace"] }
env_logger = "0.10.0"
anyhow = "1.0.70"

log = { version = "0.4" }
tracing = { version = "0.1", optional = true }
data-test = "0.1.1"

[patch.crates-io]
# patch the yup-oauth2 version with a custom for to support forcing the user to choose an account.
# this can be removed as soon as PR (#205)[https://github.com/dermesser/yup-oauth2/pull/205] is resolved and
# the google-youtube3 crate uses the google-apis-common crate that implements this
yup-oauth2 = { version = "8.1.1", git = "https://github.com/OMGeeky/yup-oauth2", branch = "8.1.1" }

[features]
default = []
tracing = [
    "dep:tracing",
    "google_bigquery_v2/tracing",
    "google_youtube/tracing",
    "twitch_data/tracing",
    "downloader_config/tracing",
]
